# Ai-Glue-code

./: .gitignore  .replit  pyproject.toml  replit.md  replit.nix
.agents/memory/: MEMORY.md  agent-architecture.md  controle-inter-processus.md  dossiers-par-projet.md  feuille-de-route.md  generateur-univers.md  objectifs-admin-only.md
agents/: .env.example  .gitignore  01_directeur.py  01_directeur_creatif.py  02_architecte_narratif.py  03_scenariste.py  04_directeur_artistique.py  05_directeur_technique.py  06_superviseur_post_production.py  07_exporteur_multi_format.py  08_ingenieur_son.py  MANUEL.md  README.md  agent_base.py  api_serveur.py  bootstrap.py  bureau.py  chat_agents.py  client_api.py  client_worker.py  config_agents.py  controle_production.py  executeur_local.py  export_local.py  generateur_univers.py  journal_production.py  main.py  memoire.py  orchestrateur.py  projets.py  requirements.txt  requirements_logiciels.json  securite.py  shared_state.py  streamlit_app.py  test_pilotage.py  test_projets.py  utils_headless.py  worker_distant.py
agents/mobile-apk/: README.md  build_apk.py  capacitor.config.json  package-lock.json  package.json  shell.nix
agents/mobile-apk/www/: app.js  config.js  index.html  manifest.webmanifest  style.css  sw.js
agents/pwa/: app.js  index.html  manifest.webmanifest  style.css  sw.js
agents/pwa/icons/: generer_icones.py
agents/univers/: README.md  civitai_client.py  config.py  orchestrateur_univers.py  projet_manager.py  schemas.py  sd_client.py  test_univers.py
agents/univers/agents/: curateur_civitai.py  (+7 more)
