[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.23",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "streamlit==1.38.0",
]
